--- a/Examples/BVSDKDemo/BVSDKDemo/Search/SearchViewController.xib
+++ b/Examples/BVSDKDemo/BVSDKDemo/Search/SearchViewController.xib
@@ -14,6 +14,7 @@
                 <outlet property="tableView" destination="QSJ-l2-rpl" id="qsz-4e-E1c"/>
                 <outlet property="tableViewForComments" destination="pc5-Fk-kjk" id="Z1O-Dj-6kc"/>
                 <outlet property="tableViewForRatings" destination="NT0-Ah-1nv" id="3yE-3Y-kuo"/>
+                <outlet property="tableViewforProduct" destination="6Vg-A3-YJs" id="9WB-a0-4t5"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="view_Background" destination="g1Y-Hp-KSF" id="sCL-Ie-GCO"/>
                 <outlet property="view_TableBackground" destination="kdR-5A-izM" id="Afh-Y7-Yi6"/>
@@ -72,7 +73,7 @@
                                         <outlet property="delegate" destination="-1" id="d76-V0-Fyk"/>
                                     </connections>
                                 </tableView>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NT0-Ah-1nv" customClass="BVReviewsTableView">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NT0-Ah-1nv" customClass="BVReviewsTableView">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="662"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <connections>
@@ -80,12 +81,20 @@
                                         <outlet property="delegate" destination="-1" id="kI1-ae-pox"/>
                                     </connections>
                                 </tableView>
-                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pc5-Fk-kjk">
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pc5-Fk-kjk">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="662"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <connections>
                                         <outlet property="dataSource" destination="-1" id="vje-QS-erZ"/>
                                         <outlet property="delegate" destination="-1" id="mTg-zr-Oo9"/>
+                                    </connections>
+                                </tableView>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6Vg-A3-YJs">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="662"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                    <connections>
+                                        <outlet property="dataSource" destination="-1" id="L1N-CN-qgh"/>
+                                        <outlet property="delegate" destination="-1" id="A3j-na-was"/>
                                     </connections>
                                 </tableView>
                             </subviews>
@@ -96,14 +105,18 @@
                                 <constraint firstItem="Dc5-do-lAL" firstAttribute="top" secondItem="kdR-5A-izM" secondAttribute="top" constant="40" id="D5I-aw-bW5"/>
                                 <constraint firstItem="pc5-Fk-kjk" firstAttribute="leading" secondItem="kdR-5A-izM" secondAttribute="leading" id="Db5-Wd-uas"/>
                                 <constraint firstItem="NT0-Ah-1nv" firstAttribute="leading" secondItem="QSJ-l2-rpl" secondAttribute="leading" id="FS5-Ri-xbr"/>
+                                <constraint firstItem="6Vg-A3-YJs" firstAttribute="trailing" secondItem="QSJ-l2-rpl" secondAttribute="trailing" id="KqN-zu-u7f"/>
                                 <constraint firstItem="QSJ-l2-rpl" firstAttribute="leading" secondItem="kdR-5A-izM" secondAttribute="leading" id="Lt7-pF-dGB"/>
                                 <constraint firstAttribute="bottom" secondItem="QSJ-l2-rpl" secondAttribute="bottom" id="QgX-sX-lBx"/>
                                 <constraint firstAttribute="bottom" secondItem="pc5-Fk-kjk" secondAttribute="bottom" id="SGy-Rv-lUa"/>
+                                <constraint firstItem="6Vg-A3-YJs" firstAttribute="leading" secondItem="QSJ-l2-rpl" secondAttribute="leading" id="VSQ-Sk-aWe"/>
                                 <constraint firstAttribute="trailing" secondItem="QSJ-l2-rpl" secondAttribute="trailing" id="Z3s-qD-fki"/>
                                 <constraint firstItem="NT0-Ah-1nv" firstAttribute="bottom" secondItem="QSJ-l2-rpl" secondAttribute="bottom" id="aRx-z3-8jT"/>
+                                <constraint firstItem="6Vg-A3-YJs" firstAttribute="top" secondItem="QSJ-l2-rpl" secondAttribute="top" id="gCD-wM-16d"/>
                                 <constraint firstItem="Dc5-do-lAL" firstAttribute="leading" secondItem="kdR-5A-izM" secondAttribute="leading" constant="20" id="jSw-0n-NBc"/>
                                 <constraint firstAttribute="trailing" secondItem="Dc5-do-lAL" secondAttribute="trailing" constant="20" id="vD2-w2-zx6"/>
                                 <constraint firstAttribute="trailing" secondItem="pc5-Fk-kjk" secondAttribute="trailing" id="vWo-8l-J6L"/>
+                                <constraint firstItem="6Vg-A3-YJs" firstAttribute="bottom" secondItem="QSJ-l2-rpl" secondAttribute="bottom" id="wgz-7Y-MWn"/>
                                 <constraint firstItem="QSJ-l2-rpl" firstAttribute="top" secondItem="kdR-5A-izM" secondAttribute="top" id="xek-i1-IZy"/>
                                 <constraint firstItem="pc5-Fk-kjk" firstAttribute="top" secondItem="kdR-5A-izM" secondAttribute="top" id="xpb-1T-nf9"/>
                             </constraints>
